# MinVR2

./: CMakeLists.txt  paint3d-devices.vrpncfg
apps/example/: desktop.xml  main.cpp
apps/server/: main.cpp
contrib/plugins/GLFW/src/: GlfwPlugin.cpp  GlfwWindow.h  (+2 more)
display/: CMakeLists.txt  README.md  VRCallbackRenderer.cpp  VRCallbackRenderer.h  VRDisplayNode.cpp  VRDisplayNode.h
display/base/: VRBasicRenderer.h  VRCompositeDisplayFactory.cpp  VRCompositeDisplayFactory.h  VRDisplayNode.cpp  VRDisplayNode.h  VRHasDisplayChildren.h  VRRenderCallback.h
display/base/factories/: VRCompositeDisplayFactory.cpp  VRTypedDisplayFactory.cpp  VRTypedDisplayFactory.h
display/console/: VRConsoleDisplay.h
display/factories/: VRCompositeDisplayFactory.cpp  VRCompositeDisplayFactory.h  VRDisplayFactory.h  VRTypedDisplayFactory.cpp  VRTypedDisplayFactory.h
display/factories/graphics/: VRGraphicsWindowFactory.cpp  VRGraphicsWindowFactory.h
display/factories/graphics/stereo/: VRStereoFactory.cpp  VRStereoFactory.h
display/factories/graphics/structure/: VRViewportFactory.cpp  VRViewportFactory.h
display/factories/scope/: VRScopeNode.h
display/framework/: VRRenderState.cpp  VRRenderer.h
display/framework/graph/: VRHasDisplayChildren.h
display/framework/renderers/: VRBasicRenderer.cpp  VRBasicRenderer.h
display/framework/synchronization/: VRSynchronizedDisplay.h
display/graphics/: VRGraphicsRenderNode.cpp  VRGraphicsRenderNode.h  VRGraphicsWindowChild.cpp  VRGraphicsWindowChild.h  VRGraphicsWindowFactory.cpp  VRGraphicsWindowFactory.h  VRGraphicsWindowNode.cpp  VRGraphicsWindowNode.h
display/graphics/stereo/: VRSideBySideNode.cpp  VRSideBySideNode.h  VRStereoFactory.cpp  VRStereoFactory.h  VRStereoNode.cpp  VRStereoNode.h
display/graphics/structure/: VRRect.cpp  VRRectCalculator.cpp  VRRectCalculator.h  VRTile.cpp  VRTile.h  VRTileNode.cpp  VRTileNode.h  VRViewport.cpp  VRViewport.h  VRViewportFactory.cpp  VRViewportFactory.h  VRViewportNode.cpp  VRViewportNode.h
display/interfaces/: VRDisplay.h  VRRenderState.cpp  VRRenderState.h  VRRenderer.h
display/interfaces/graph/: VRHasDisplayChildren.h
display/interfaces/renderers/: VRBasicRenderer.cpp  VRBasicRenderer.h
display/interfaces/synchronization/: VRSynchronizedDisplay.h
display/nodes/console/: VRConsoleDisplay.cpp  VRConsoleDisplay.h
display/nodes/graphics/: VRGraphicsContextNode.h  VRGraphicsWindowChild.cpp  VRGraphicsWindowNode.cpp  VRGraphicsWindowNode.h
display/nodes/graphics/stereo/: VRSideBySideNode.cpp  VRSideBySideNode.h  VRStereoNode.cpp  VRStereoNode.h
display/nodes/graphics/structure/: VRRect.cpp  VRRectCalculator.cpp  VRRectCalculator.h  VRTile.cpp  VRTile.h  VRTileNode.cpp  VRTileNode.h  VRViewportNode.cpp  VRViewportNode.h
display/nodes/scope/: VRStateScopeNode.cpp  VRStateScopeNode.h
display/renderers/: VRBasicRenderer.cpp  VRBasicRenderer.h  VRCallbackRenderer.cpp  VRCallbackRenderer.h  VRRenderHandler.cpp  VRRenderHandler.h  VRRenderState.cpp
display/renderers/concrete/: VRCallbackRenderer.cpp  VRCallbackRenderer.h
display/scope/: VRScopeNode.h
event/: VREvent.cpp  VREvent.h  VREventHandler.h  VRInputDevice.h
main/: VRMain.cpp  VRMain.h  VRPluginInterface.h  VRSystem.h
math/: VRMath.cpp  VRMath.h
net/: VRNetInterface.cpp
plugins/GLFW/src/: VRGLFWWindowToolkit.cpp  VRGLFWWindowToolkit.h
tests/eventdata/: main.cpp
tests/plugin/info/: CMakeLists.txt  main.cpp
